@@ -26,7 +26,8 @@ TODO
 21. Plugin pro http://www.rewin.cz/WebForm1.aspx
 22. Plugin pro http://dictionary.cambridge.org/
     (několik slovníků, idiomy, frázová slovesa…)
-23.
+23. Dodelat Metatrans::LinguaTranslateGoogle.
+24.
 
 Applied
 =======
