@@ -7,6 +7,7 @@
   add MetaTrans::SmsCz
   add MetaTrans::WordbookCz
   add MetaTrans::UltralinguaNet
+  add MetaTrans::LinguaTranslateGoogle
 </modules>
 
 # default language to translate from
